@startuml

title __ARCH's Class Diagram__\n

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.arch {
      class FirebaseLiveDataHelper {
          - query : Query
          - listener : ValueEventListener
          + FirebaseLiveDataHelper()
          # onActive()
          # onInactive()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.arch {
      class Repository {
          {static} + TAG : String
          {static} ~ INSTANCE : Repository
          - mAuth : FirebaseAuth
          - mUser : FirebaseUser
          - mDatabase : DatabaseReference
          - Repository()
          + loginEmailAndPassword()
          + registerEmailAndPassword()
          + setFirebaseUser()
          + updateUser()
          + writeNewUser()
          + deleteUser()
          + insertNewPost()
          + updatePost()
          + deletePost()
          + getUserReference()
          + getPostsReference()
          + getAllUsersReference()
          {static} + getInstance()
      }
    }
  }
  

  FirebaseLiveDataHelper -up-|> LiveData
  AlwaysActiveObserver -up-|> ObserverWrapper
  LifecycleBoundObserver -up-|> GenericLifecycleObserver
  LifecycleBoundObserver -up-|> ObserverWrapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
